@@ -67,6 +67,8 @@ Cacti CHANGELOG
 -feature: Add Data Source Type "COMPUTE" to data templates to fully support all rrdtool-1.2.x data source types
 -feature: Fix compatibility issues for RRDTool 1.3
 -feature: Disable snmpbulkwalk if $max_oids is less than 2
+-feature: Add additional options to speed data query graph automation process
+-feature: Add additional indexes to speed data query graph creation
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
